--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,14 +4,16 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+        photos_directory: '%kernel.project_dir%/public/uploads/photos'
+        frames_directory: '%kernel.project_dir%/public/uploads/frames'
+        temp_dir: '%kernel.project_dir%/tmp'
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
+     #makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
@@ -19,6 +21,24 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
+      
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\EventListener\FileDeleteListener:
+        arguments:
+            $photoDirectory: '%photos_directory%'
+        tags:
+            - { name: kernel.event_subscriber }
+
+    App\Service\FileCleaner:
+        arguments:
+            $photoDirectory: '%photos_directory%'
+            $kernel: '@kernel'
+            $requestStack: '@request_stack'
+            
+    App\EventSubscriber\FileCleanerSubscriber:
+        arguments:
+            $fileCleaner: '@App\Service\FileCleaner'
+        tags:
+            - { name: kernel.event_subscriber }  
+            
